# Rust_Chrome_Dino

./: README.md
terminal_dino/: Cargo.toml
terminal_dino/src/: direction.rs  point.rs  user_commands.rs
