[package]
name = "terminal_dino"
version = "0.1.0"
authors = ["Sam Bordo <sambordo1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.17.5" # library for rendering in the terminal
rusty_audio = "1.1.4" # library for playing audio
rusty_time = "0.11.0" # library for getting the current time